Remove unused display image endpoint and add type and name fields to ProductImage entity